--- a/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
+++ b/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
@@ -2,6 +2,9 @@
   background: var(--mui-palette-grey-100);
   padding: spacing(2);
   border-radius: var(--mui-shape-borderRadius);
+  height: $product-card-height;
+  box-sizing: content-box;
+  position: relative;
 
   &--dragging:not(&--active).row--blocked {
     opacity: 0.5;
@@ -14,6 +17,15 @@
 
   &--over:not(&--blocked):not(&--active) {
     background: var(--mui-palette-grey-300);
+  }
+
+  &__actions {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    gap: spacing(2);
+    padding: spacing(1);
   }
 
   &__list {
