--- a/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
+++ b/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
@@ -5,6 +5,7 @@
   height: $product-card-height;
   box-sizing: content-box;
   position: relative;
+  cursor: move;
 
   &--dragging:not(&--active).row--blocked {
     opacity: 0.5;
@@ -24,7 +25,7 @@
     top: 0;
     right: 0;
     display: flex;
-    gap: spacing(2);
+    gap: spacing(1);
     padding: spacing(1);
   }
 
