--- a/src/presentation/grid-editor/pages/EditorPage/styles.module.scss
+++ b/src/presentation/grid-editor/pages/EditorPage/styles.module.scss
@@ -9,9 +9,15 @@
     color: var(--mui-palette-grey-300);
   }
 
+  &__body {
+    display: flex;
+    justify-content: center;
+  }
+
   &__rows {
     display: flex;
     flex-direction: column;
     gap: spacing(2);
+    width: calc(100% * var(--zoom-factor));
   }
 }
