--- a/src/presentation/grid-editor/components/Product/Card/Card.module.scss
+++ b/src/presentation/grid-editor/components/Product/Card/Card.module.scss
@@ -1,7 +1,7 @@
 .card {
   @include fadein;
-  width: $product-card-width;
-  height: $product-card-height;
+  width: calc($product-card-width * var(--zoom-factor));
+  height: calc($product-card-height * var(--zoom-factor));
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,14 +15,31 @@
   &__image {
     object-fit: contain;
     width: 100%;
-    height: $product-image-height;
+    height: calc($product-image-height * var(--zoom-factor));
   }
 
   &__content {
-    padding: 10px;
+    padding: spacing(1);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     text-align: center;
+  }
+
+  & &__name,
+  & &__price {
+    font-size: calc(1rem * var(--zoom-factor));
+  }
+
+  &--small-zoom {
+    .card {
+      &__image {
+        height: calc($product-image-height);
+      }
+
+      &__content {
+        display: none;
+      }
+    }
   }
 }
