--- a/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
+++ b/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
@@ -2,7 +2,7 @@
   background: var(--mui-palette-grey-100);
   padding: spacing(2);
   border-radius: var(--mui-shape-borderRadius);
-  height: $product-card-height;
+  height: calc($product-card-height * var(--zoom-factor));
   box-sizing: content-box;
   position: relative;
   cursor: move;
@@ -29,9 +29,15 @@
     padding: spacing(1);
   }
 
+  & &__button {
+    background-color: var(--mui-palette-common-white);
+    border: 1px solid var(--mui-palette-grey-200);
+    z-index: 3;
+  }
+
   &__list {
     display: flex;
-    gap: spacing(2);
+    gap: calc(spacing(2) * var(--zoom-factor));
     list-style-type: none;
     margin: 0;
     padding: 0;
