--- a/src/presentation/grid-editor/components/Product/Row/AddRowPlaceholder/styles.module.scss
+++ b/src/presentation/grid-editor/components/Product/Row/AddRowPlaceholder/styles.module.scss
@@ -1,24 +1,27 @@
 .placeholder {
+  background: var(--mui-palette-background-paper);
   height: calc(spacing(2) * 2 + $product-card-height * var(--zoom-factor));
   border-radius: var(--mui-shape-borderRadius);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0.5;
-  border: 2px dashed var(--mui-palette-grey-300);
   cursor: pointer;
-  gap: spacing(2);
+  padding: spacing(2);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.08);
+
+  &__wrapper {
+    border: 2px dashed var(--mui-palette-grey-300);
+    border-radius: var(--mui-shape-borderRadius);
+    height: 100%;
+    display: flex;
+    gap: spacing(2);
+    align-items: center;
+    justify-content: center;
+  }
 
   & &__icon {
     font-size: calc(5rem * var(--zoom-factor));
   }
 
   &__text {
-    font-weight: 500;
     color: var(--mui-palette-grey-600);
-  }
-
-  &:hover {
-    opacity: 1;
+    font-size: calc(2rem * var(--zoom-factor));
   }
 }
