--- a/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
+++ b/src/presentation/grid-editor/components/Product/Row/ProductRow/styles.module.scss
@@ -1,5 +1,5 @@
 .row {
-  background: var(--mui-palette-grey-100);
+  background: var(--mui-palette-background-paper);
   padding: spacing(2);
   border-radius: var(--mui-shape-borderRadius);
   height: calc($product-card-height * var(--zoom-factor));
@@ -7,6 +7,7 @@
   position: relative;
   display: flex;
   justify-content: flex-start;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.08);
 
   &--dragging:not(&--active).row--blocked {
     opacity: 0.5;
@@ -15,10 +16,6 @@
 
   &--over {
     cursor: pointer;
-  }
-
-  &--over:not(&--blocked):not(&--active) {
-    background: var(--mui-palette-grey-300);
   }
 
   &__list {
